--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/MyBid.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/MyBid.cshtml
@@ -1,4 +1,11 @@
-﻿@{Layout = "~/Views/UserLayout/MainLayout.cshtml";}
+﻿@{
+    Layout = "~/Views/UserLayout/MainLayout.cshtml";
+    List<Auction> MyBid = null;
+    if (ViewBag.MyBid != null)
+    {
+        MyBid = ViewBag.MyBid;
+    }
+}
 
 <!--============= Hero Section Starts Here =============-->
 <div class="hero-section style-2">
@@ -41,178 +48,69 @@
                 <div class="tab-content">
                     <div class="tab-pane fade show active" id="upcoming">
                         <div class="row mb-30-none justify-content-center">
-                            <div class="col-sm-10 col-md-6">
-                                <div class="auction-item-2">
-                                    <div class="auction-thumb">
-                                        <a href="product-details.html"><img src="~/assetsIndex/images/auction/car/auction-1.jpg" alt="car"></a>
-                                        <a href="#0" class="rating"><i class="far fa-star"></i></a>
-                                        <a href="#0" class="bid"><i class="flaticon-auction"></i></a>
-                                    </div>
-                                    <div class="auction-content">
-                                        <h6 class="title">
-                                            <a href="#0">2018 Hyundai Sonata</a>
-                                        </h6>
-                                        <div class="bid-area">
-                                            <div class="bid-amount">
-                                                <div class="icon">
-                                                    <i class="flaticon-auction"></i>
-                                                </div>
-                                                <div class="amount-content">
-                                                    <div class="current">Current Bid</div>
-                                                    <div class="amount">$876.00</div>
-                                                </div>
-                                            </div>
-                                            <div class="bid-amount">
-                                                <div class="icon">
-                                                    <i class="flaticon-money"></i>
-                                                </div>
-                                                <div class="amount-content">
-                                                    <div class="current">Buy Now</div>
-                                                    <div class="amount">$5,00.00</div>
-                                                </div>
-                                            </div>
+                            @foreach (var item in MyBid)
+                            {
+                                long CurrentBid = 0;
+                                int BidCount = 0;
+                                if (item.AuctionRecords != null)
+                                {
+                                    CurrentBid = item.AuctionRecords.Max(x => x.BidPrice);
+                                    BidCount = item.AuctionRecords.Count();
+                                    if (CurrentBid == 0)
+                                    {
+                                        CurrentBid = item.ReservePrice;
+                                    }
+                                }
+                                else
+                                {
+                                    CurrentBid = item.ReservePrice;
+                                }
+                                <div class="col-sm-10 col-md-6">
+                                    <div class="auction-item-2">
+                                        <div class="auction-thumb">
+                                            <a href="product-details.html"><img src="~/assets/img/artwork/@item.Artwork.Image" alt="car"></a>
+                                            <a href="#0" class="rating"><i class="far fa-star"></i></a>
+                                            <a href="#0" class="bid"><i class="flaticon-auction"></i></a>
                                         </div>
-                                        <div class="countdown-area">
-                                            <div class="countdown">
-                                                <div id="bid_counter26"></div>
-                                            </div>
-                                            <span class="total-bids">30 Bids</span>
-                                        </div>
-                                        <div class="text-center">
-                                            <a href="#0" class="custom-button">Submit a bid</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-10 col-md-6">
-                                <div class="auction-item-2">
-                                    <div class="auction-thumb">
-                                        <a href="product-details.html"><img src="~/assetsIndex/images/auction/car/auction-2.jpg" alt="car"></a>
-                                        <a href="#0" class="rating"><i class="far fa-star"></i></a>
-                                        <a href="#0" class="bid"><i class="flaticon-auction"></i></a>
-                                    </div>
-                                    <div class="auction-content">
-                                        <h6 class="title">
-                                            <a href="#0">2018 Nissan Versa, S</a>
-                                        </h6>
-                                        <div class="bid-area">
-                                            <div class="bid-amount">
-                                                <div class="icon">
-                                                    <i class="flaticon-auction"></i>
+                                        <div class="auction-content">
+                                            <h6 class="title">
+                                                <a href="#0">@item.Artwork.Name</a>
+                                            </h6>
+                                            <div class="bid-area">
+                                                <div class="bid-amount">
+                                                    <div class="icon">
+                                                        <i class="flaticon-auction"></i>
+                                                    </div>
+                                                    <div class="amount-content">
+                                                        <div class="current">Current Bid</div>
+                                                        <div class="amount">$@CurrentBid</div>
+                                                    </div>
                                                 </div>
-                                                <div class="amount-content">
-                                                    <div class="current">Current Bid</div>
-                                                    <div class="amount">$876.00</div>
+                                                <div class="bid-amount">
+                                                    <div class="icon">
+                                                        <i class="flaticon-money"></i>
+                                                    </div>
+                                                    <div class="amount-content">
+                                                        <div class="current">Begin bid</div>
+                                                        <div class="amount">$@item.ReservePrice</div>
+                                                    </div>
                                                 </div>
                                             </div>
-                                            <div class="bid-amount">
-                                                <div class="icon">
-                                                    <i class="flaticon-money"></i>
+                                            <div class="countdown-area">
+                                                <div class="countdown">
+                                                    <div id="bid_counter26"></div>
                                                 </div>
-                                                <div class="amount-content">
-                                                    <div class="current">Buy Now</div>
-                                                    <div class="amount">$5,00.00</div>
-                                                </div>
+                                                <span class="total-bids">@BidCount Bids</span>
                                             </div>
-                                        </div>
-                                        <div class="countdown-area">
-                                            <div class="countdown">
-                                                <div id="bid_counter27"></div>
+                                            <div class="text-center">
+                                                <a href="/Index/auctiondetail?auctionId=@item.Id" class="custom-button">Detail</a>
                                             </div>
-                                            <span class="total-bids">30 Bids</span>
-                                        </div>
-                                        <div class="text-center">
-                                            <a href="#0" class="custom-button">Submit a bid</a>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-sm-10 col-md-6">
-                                <div class="auction-item-2">
-                                    <div class="auction-thumb">
-                                        <a href="product-details.html"><img src="~/assetsIndex/images/auction/product/01.png" alt="product"></a>
-                                        <a href="#0" class="rating"><i class="far fa-star"></i></a>
-                                        <a href="#0" class="bid"><i class="flaticon-auction"></i></a>
-                                    </div>
-                                    <div class="auction-content">
-                                        <h6 class="title">
-                                            <a href="#0">2019 Mercedes-Benz C, 300</a>
-                                        </h6>
-                                        <div class="bid-area">
-                                            <div class="bid-amount">
-                                                <div class="icon">
-                                                    <i class="flaticon-auction"></i>
-                                                </div>
-                                                <div class="amount-content">
-                                                    <div class="current">Current Bid</div>
-                                                    <div class="amount">$876.00</div>
-                                                </div>
-                                            </div>
-                                            <div class="bid-amount">
-                                                <div class="icon">
-                                                    <i class="flaticon-money"></i>
-                                                </div>
-                                                <div class="amount-content">
-                                                    <div class="current">Buy Now</div>
-                                                    <div class="amount">$5,00.00</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="countdown-area">
-                                            <div class="countdown">
-                                                <div id="bid_counter1"></div>
-                                            </div>
-                                            <span class="total-bids">30 Bids</span>
-                                        </div>
-                                        <div class="text-center">
-                                            <a href="#0" class="custom-button">Submit a bid</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-10 col-md-6">
-                                <div class="auction-item-2">
-                                    <div class="auction-thumb">
-                                        <a href="product-details.html"><img src="~/assetsIndex/images/auction/product/02.png" alt="product"></a>
-                                        <a href="#0" class="rating"><i class="far fa-star"></i></a>
-                                        <a href="#0" class="bid"><i class="flaticon-auction"></i></a>
-                                    </div>
-                                    <div class="auction-content">
-                                        <h6 class="title">
-                                            <a href="#0">2017 Harley-Davidson XG750,</a>
-                                        </h6>
-                                        <div class="bid-area">
-                                            <div class="bid-amount">
-                                                <div class="icon">
-                                                    <i class="flaticon-auction"></i>
-                                                </div>
-                                                <div class="amount-content">
-                                                    <div class="current">Current Bid</div>
-                                                    <div class="amount">$876.00</div>
-                                                </div>
-                                            </div>
-                                            <div class="bid-amount">
-                                                <div class="icon">
-                                                    <i class="flaticon-money"></i>
-                                                </div>
-                                                <div class="amount-content">
-                                                    <div class="current">Buy Now</div>
-                                                    <div class="amount">$5,00.00</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="countdown-area">
-                                            <div class="countdown">
-                                                <div id="bid_counter2"></div>
-                                            </div>
-                                            <span class="total-bids">30 Bids</span>
-                                        </div>
-                                        <div class="text-center">
-                                            <a href="#0" class="custom-button">Submit a bid</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            }
+
+
                         </div>
                     </div>
                     <div class="tab-pane fade" id="past">
