--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/ArtworkDetail.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/ArtworkDetail.cshtml
@@ -6,11 +6,21 @@
     {
         User = ViewBag.User;
     }
-
+    List<MyGallery> Comments = null;
+    if (ViewBag.Comments != null)
+    {
+        Comments = ViewBag.Comments;
+    }
     Artwork Artwork = null;
     if (ViewBag.Artwork != null)
     {
         Artwork = ViewBag.Artwork;
+    }
+
+    MyGallery MyComment = null;
+    if (ViewBag.MyComment != null)
+    {
+        MyComment = ViewBag.MyComment;
     }
 }
 <!--============= Hero Section Starts Here =============-->
@@ -48,7 +58,7 @@
                 <div class="product-details-content">
                     <div class="product-details-header">
                         <h2 class="title" id="title">@Artwork.Name</h2>
-                        <input type="hidden" name="artworkId"id="artWorkId" value="@Artwork.Id" />
+                        <input type="hidden" name="artworkId" id="artWorkId" value="@Artwork.Id" />
                     </div>
                     <div id="rating">
                         <input type="radio" name="rate" value="5" id="rate-5" />
@@ -69,18 +79,22 @@
                             <input type="hidden" id="userId" value="@User.Id">
                         }
                     </div>
+                    <input type="hidden" id="myRate" value="@(MyComment == null?0:MyComment.Rate)">
                     <div style="margin-bottom:15px" class="row">
                         <div class="col-md-8">
-                        <input id="txtCmt" type="text" placeholder="Enter you comment">
+                            <input id="txtCmt" type="text" value="@(MyComment == null?"":MyComment.Remark)" placeholder="Enter you comment">
                         </div>
                         <div class="col-md-4">
-                            <button id="btnComent" class="custom-button">Submit comment</button>
+                            <button id="btnComent" data-url="@Url.Action("RateAndComment")" class="custom-button">Submit comment</button>
                         </div>
+                    </div>
+                    <div class="alert alert-info d-none" role="alert" id="alertBox">
+                        This is a info alert—check it out!
                     </div>
                     <ul class="price-table mb-30">
                         <li class="header">
-                            <h5 >Artist</h5>
-                            <h3 >@Artwork.Artist.Name</h3>
+                            <h5>Artist</h5>
+                            <h3>@Artwork.Artist.Name</h3>
                         </li>
                         <li class="header">
                             <h5 class="current">Price</h5>
@@ -193,39 +207,20 @@
                         <div class="table-wrapper">
                             <table class="shipping-table" style="margin-left:15px">
                                 <tbody>
-                                    <tr>
-                                        <td>
-                                            <i class="fa fa-user" aria-hidden="true"></i>
-                                            <span><b>UserName</b></span>
-                                            <br />
-                                            <span id="comment" style="margin-left:20px">Sản Phẩm như quần què</span>
-                                        </td>
-                                        <td>
-                                            4<i class="fa fa-star" aria-hidden="true"></i>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <i class="fa fa-user" aria-hidden="true"></i>
-                                            <span><b>UserName</b></span>
-                                            <br />
-                                            <span id="comment" style="margin-left:20px">Sản Phẩm như quần què</span>
-                                        </td>
-                                        <td>
-                                            4<i class="fa fa-star" aria-hidden="true"></i>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <i class="fa fa-user" aria-hidden="true"></i>
-                                            <span><b>UserName</b></span>
-                                            <br />
-                                            <span id="comment" style="margin-left:20px">Sản Phẩm như quần què</span>
-                                        </td>
-                                        <td>
-                                            4<i class="fa fa-star" aria-hidden="true"></i>
-                                        </td>
-                                    </tr>
+                                    @foreach (var item in Comments)
+                                    {
+                                        <tr>
+                                            <td>
+                                                <i class="fa fa-user" aria-hidden="true"></i>
+                                                <span><b>@item.Customer.Name</b></span>
+                                                <br />
+                                                <span id="comment" style="margin-left:20px">@item.Remark</span>
+                                            </td>
+                                            <td>
+                                                @item.Rate<i class="fa fa-star" aria-hidden="true"></i>
+                                            </td>
+                                        </tr>
+                                    }
                                 </tbody>
                             </table>
                         </div>
